# basic-reverb

./: Cargo.toml  README.md
benches/: my_benchmark.rs
src/: array.rs  basic_reverb.rs  constants.rs  delay.rs  diffuser.rs  diffuser_half_lengths.rs  diffusion_step.rs  hadmard.rs  hadmard_test.rs  householder.rs  householder_test.rs  lib.rs  main.rs  mean.rs  mono_basic_reverb.rs  multi_channel_mixed_feedback.rs  random_in_range.rs  reverb.rs  sample_rate.rs  stereo_basic_reverb.rs
src/diffuser/: diffuser_half_lengths.rs  diffusion_step.rs  mod.rs
src/mix_matrix/: create_hadamard_matrix.rs  create_hadamard_matrix_test.rs  hadamard.rs  hadamard2.rs  hadamard2_test.rs  hadamard_test.rs  hadmard_test.rs  householder_test.rs  mod.rs  multiply_matrixes.rs  multiply_matrixes_test.rs
tests/: reverb_test.rs  run_with_file.rs
