[package]
name = "basic-reverb"
version = "0.1.3"
edition = "2021"
description = "A Rust implementation of the reverb presented at \"Let's Write A Reverb\""
homepage = "https://github.com/yolisses/basic-reverb"
repository = "https://github.com/yolisses/basic-reverb"
keywords = ["reverb", "multichannel", "audio"]
readme = "README.md"
license = "MIT"

[dependencies]
array-init = "2.1.0"
matrixmultiply = "0.3.8"
rand = "0.8.5"

[dev-dependencies]
wavers = "1.4.0" # for integration test
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false
